# 3D_Classroom_Opengl

./: 3D_Classroom_Presentation.pptx  CMakeLists.txt  README.md  README.txt  main.cpp
